Update phí đóng góp + tạo hóa đơn #1